--- a/README
+++ b/README
@@ -20,7 +20,7 @@ There is a need for systems that:
 * Retrieve **semantically relevant information**
 * Form the foundation for RAG, recommendation systems, and AI agents
 
-DEPLOYMENT LINK: 
+DEPLOYMENT LINK: https://endee-rag-app-eeergg5ejih54us4tc6tac.streamlit.app/
 ---
 
 ## 🔹 Solution Overview
